--- a/cw2/index.html
+++ b/cw2/index.html
@@ -11,24 +11,20 @@
     <div id="title">Przygody Pana Cyfrowego</div>
 
     <div id = "subtitle">
-        <div class = "gif"></div>
-        <div class = "gif"></div>
-        <div class = "gif"></div>
-        <div class = "gif"></div>
+        <div class = "gif"><img src="img/gada.gif"/></div>
+        <div class = "gif"><img src="img/majta noga.gif">/</div>
+        <div class = "gif"><img src="img/odwrot.gif"/></div>
+        <div class = "gif"><img src="img/intro.gif"/></div>
     </div>
 
-    <div id="content"></div>
-        <div 
-
-
-
+    <div id="content">
+        <div class = "zdjecie"> <img src="img/wstaje.gif" alt = "już nie siedzi"/></div>
+        <div class = "opis">Wziął i usiadł !</div>
 
     </div>
 
     <div id="footer">
-
-
-        
+        Strona stworzona przez: Denis czerwiński
     </div>
 
 
