--- a/cw2/index.html
+++ b/cw2/index.html
@@ -17,14 +17,14 @@
         <div class = "gif"><img src="img/intro.gif"/></div>
     </div>
 
-    <div id="content">
+    <div class = "content">
         <div class = "zdjecie"> <img src="img/wstaje.gif" alt = "już nie siedzi"/></div>
-        <div class = "opis">Wziął i usiadł !</div>
+        <div class = "opis">Lorem ipsum dolor sit amet</div>
 
     </div>
 
     <div id="footer">
-        Strona stworzona przez: Denis czerwiński
+        Strona stworzona przez: Denis Czerwiński
     </div>
 
 
