--- a/cw3/index.html
+++ b/cw3/index.html
@@ -4,34 +4,56 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ćw3</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <div class="cwiartka1">
-        <div class="ramkagorna">
+        <div class="ramkaGorna">
             <div class="logo"></div>
-            <div class="abs"></div>
-            <div class="rel"></div>
-            <div class="czcio"></div>
+            <div class="menu">
+                <div><h1>Absolutne</h1></div>
+                <div><h1>Relatywne</h1></div>
+                <div><h1>Czcionki</h1></div>
+            </div>
+
         </div>
     </div>
 
     <div class="cwiartka2">
+        <h1>Absolutne</h1>
         <div class="wykresPion">
-
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
         </div>
     </div>
 
     <div class="cwiartka3">
-        <div class="wykrespoziom">
-
+        <h1>Relatywne</h1>
+        <div class="wykresPoziom">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
         </div>
     </div>
 
     <div class="cwiartka4">
-        
+        <h1>Czcionki</h1>
+        <div class="tekst">
+            Jak
+            <div class="tekst">
+                To
+                <div class="tekst">
+                    Zrobić?
+                </div>
+            </div>
+        </div>
     </div>
 
 </body>
