--- a/cw3/index.html
+++ b/cw3/index.html
@@ -8,53 +8,53 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="container">
+        <div class="cwiartka1">
+            <div class="ramkaGorna">
+                <div class="logo"></div>
+                <div class="menu">
+                    <a href="#Absolutne">Absolutne</a>
+                    <a href="#Relatywne">Relatywne</a>
+                    <a href="#Czcionki">Czcionki</a>       
 
-    <div class="cwiartka1">
-        <div class="ramkaGorna">
-            <div class="logo"></div>
-            <div class="menu">
-                <div><h1>Absolutne</h1></div>
-                <div><h1>Relatywne</h1></div>
-                <div><h1>Czcionki</h1></div>
-            </div>
-
-        </div>
-    </div>
-
-    <div class="cwiartka2">
-        <h1>Absolutne</h1>
-        <div class="wykresPion">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        </div>
-    </div>
-
-    <div class="cwiartka3">
-        <h1>Relatywne</h1>
-        <div class="wykresPoziom">
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-        </div>
-    </div>
-
-    <div class="cwiartka4">
-        <h1>Czcionki</h1>
-        <div class="tekst">
-            Jak
-            <div class="tekst">
-                To
-                <div class="tekst">
-                    Zrobić?
                 </div>
             </div>
         </div>
-    </div>
+        
+        <div class="cwiartka2">
+            <h1 id ="Absolutne">Absolutne</h1>
+            <div class="wykresPion">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            </div>
+        </div>
 
+        <div class="cwiartka3">
+            <h1 id ="Relatywne">Relatywne</h1>
+            <div class="wykresPoziom">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+        </div>
+
+        <div class="cwiartka4">
+            <h1 id ="Czcionki">Czcionki</h1>
+            <div class="tekst">
+                Jak
+                <div class="tekst">
+                    To
+                    <div class="tekst">
+                        Zrobić?
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>    
 </body>
 </html>
