--- a/cw3/index.html
+++ b/cw3/index.html
@@ -23,6 +23,13 @@
         
         <div class="cwiartka2">
             <h1 id ="Absolutne">Absolutne</h1>
+            <div class = "legendaPion">
+                <p>Europa</p>
+                <p>Azja</p>
+                <p>Ameryka Pn</p>
+                <p>Afryka</p>
+                <p>Australia</p>
+            </div>
             <div class="wykresPion">
             <div></div>
             <div></div>
@@ -34,15 +41,23 @@
 
         <div class="cwiartka3">
             <h1 id ="Relatywne">Relatywne</h1>
-            <div class="wykresPoziom">
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-            </div>
+            <div class="dane">
+                <div class="legendaPoziom">
+                    <p>Ziemia</p>
+                    <p>Mars</p>
+                    <p>Jowisz</p>
+                    <p>Saturn</p>
+                    <p>Merkury</p>
+                </div>
+                <div class="wykresPoziom">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+             </div>
         </div>
-
         <div class="cwiartka4">
             <h1 id ="Czcionki">Czcionki</h1>
             <div class="tekst">
