--- a/cw4/index.html
+++ b/cw4/index.html
@@ -15,6 +15,7 @@
         <div class="zwierzeta">
             Zwierzęta
         </div>
+        <!-- AWERS TO ZDJECIE, REWERS TO BIALY  -->
         <div class="zdjecia">
             
             <div class="img">
@@ -37,7 +38,7 @@
         </div>
 
         <div class="zainteresowany">
-            Zainteresowany zwięrzętami ? Kliknij tutaj
+            <span>Zainteresowany zwierzętami? <a href="#zwierzeta"> Kliknij tutaj</a></span>
         </div>
 
 
