--- a/cw4/index.html
+++ b/cw4/index.html
@@ -20,19 +20,19 @@
             
             <div class="img">
                  <div class="awers1"></div>
-                 <div class="rewers1">Kliknij aby zobaczyć słonia</div>
+                 <div class="rewers">Kliknij aby zobaczyć słonia</div>
             </div>
              <div class="img">     
                  <div class="awers2"></div>
-                 <div class="rewers2">Kliknij aby zobaczyć zebrę</div>
+                 <div class="rewers">Kliknij aby zobaczyć zebrę</div>
             </div>     
             <div class="img">
                  <div class="awers3"></div>
-                 <div class="rewers3">Kliknij aby zobaczyć lwa</div>
+                 <div class="rewers">Kliknij aby zobaczyć lwa</div>
             </div>
              <div class="img">
                  <div class="awers4"></div>
-                 <div class="rewers4">Kliknij aby zobaczyć nosorożca</div>
+                 <div class="rewers">Kliknij aby zobaczyć nosorożca</div>
             </div>    
             
         </div>
