--- a/cw7/index.html
+++ b/cw7/index.html
@@ -15,7 +15,38 @@
         <strong>Ciasteczka!</strong> Ta strona nie używa plików cookies.
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
       </div>
-    
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">Technologia</th>
+            <th scope="col">Stopień mojego uwielbiania jej</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">HTML</th>
+            <td>10</td>
+          </tr>
+          <tr>
+              <th scope = "row">CSS</th>
+              <td>8</td>
+          </tr>
+          <tr>
+            <th scope = "row">JavaScript</th>
+            <td>7</td>
+        </tr>
+        <tr>
+            <th scope = "row">C#</th>
+            <td>5</td>
+        </tr>
+      </tbody>
+   </table>
+
+   <div class="d-flex border justify-content-center">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci doloremque impedit ea amet perferendis aliquid repudiandae libero accusantium neque dolorum.
+</div>
+
+  
 
 
 </body>
